# dingo

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/dingo-proto/: Cargo.toml  README.md
crates/dingo-proto/benches/: parsing.rs
crates/dingo-proto/src/: error.rs  lib.rs  message.rs  name.rs  question.rs  rr.rs
crates/dingo-proto/tests/: conformance.rs  vulnerability.rs
examples/no_std/: Cargo.toml
examples/no_std/src/: main.rs
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: parse_header.rs  parse_message.rs  parse_name.rs  parse_question.rs  parse_rr.rs
scripts/: download-testdata.sh  extract-dns-payloads.sh
testdata/: README.md
