[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Patrick Casey <patrick.casey1@outlook.com>"]
license = "MIT"
repository = "https://github.com/patrickjcasey/dingo"
rust-version = "1.85.1"

[workspace.dependencies]
dingo-proto = { path = "crates/dingo-proto" }
hex = "0.4.3"
pcap-parser = "0.17.0"

[workspace.lints.rust]
unsafe_code = "forbid"
