[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Patrick Casey <patrick.casey1@outlook.com>"]
license = "MIT"
repository = "https://github.com/patrickjcasey/dingo"
rust-version = "1.85.1"

[workspace.dependencies]
# internal
dingo-proto = { path = "crates/dingo-proto" }

# external
criterion = "0.8.1"
domain = "0.11.1"
hex = "0.4.3"
hickory-proto = "0.25.2"
pcap-parser = "0.17.0"
rand = "0.9.2"

[workspace.lints.rust]
unsafe_code = "forbid"
