[package]
name = "dingo-proto"
description = "A high-performance DNS packet parser focused on speed and safety"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["dns", "parser", "network", "protocol", "no_std"]
categories = ["network-programming", "parser-implementations", "no-std"]

[dependencies]

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.8.1", features = ["html_reports"] }
hickory-proto = { version = "0.25.2", default-features = false }
domain = { version = "0.11.1", default-features = false, features = ["std"] }

[[bench]]
name = "parsing"
harness = false

[features]
default = ["std"]

# adds std::error::Error to ParseError
std = []
