[package]
name = "dingo-proto"
description = "A high-performance DNS packet parser focused on speed and safety"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["dns", "parser", "network", "protocol", "no_std"]
categories = ["network-programming", "parser-implementations", "no-std"]

[dependencies]

[dev-dependencies]
domain = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
hickory-proto = { workspace = true }
pcap-parser = { workspace = true }

[[bench]]
name = "parsing"
harness = false

[features]
# adds std::error::Error to ParseError
std = []
